# wld

./: .codespellignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  README.md
.github/: copilot-instructions.md
.github/workflows/: build_and_release.yml  copilot-setup-steps.yml  pre-commit.yml
src/: config.rs  main.rs  mcp.rs
tests/: cli_integration_tests.rs  mcp_integration_tests.rs
