[package]
name = "wld"
version = "0.0.2"
edition = "2021"
authors = ["Tim Rogers <timrogers@github.com>"]
description = "Control WLED lights from the command line or your favorite MCP client"
repository = "https://github.com/timrogers/wld"
license = "MIT"
readme = "README.md"
categories = ["hardware-support", "command-line-utilities"]
keywords = ["wled"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
wled-json-api-library = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
toml = "0.8"
directories = "5.0"
reqwest = { version = "0.11", features = ["blocking"] }
rmcp = { version = "0.6.0", features = ["server", "transport-io", "macros"], optional = true }
tokio = { version = "1.47", features = ["rt", "rt-multi-thread", "macros"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
schemars = { version = "0.8", features = ["derive"], optional = true }

[features]
default = ["mcp"]
mcp = ["dep:rmcp", "dep:tokio", "dep:tracing", "dep:tracing-subscriber", "dep:schemars", "dep:serde_json"]
